--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>OUR FOOD OUR HEALTH</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/aos.css">
+  <!-- <link rel="stylesheet" href="css/aos.css"> -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -247,7 +247,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/t-js_t.min.js"></script>
-  <script src="js/aos.js"></script>
+  <!-- <script src="js/aos.js"></script> -->
   <script>
     $(function () {
       $("#header").load("includes/header.html");
@@ -258,13 +258,13 @@
       $('.featured-slider').slick({
         slidesToShow: 4,
       });
-      AOS.init({
-        offset: 20,
-        delay: 0,
-        duration: 1500,
-        easing: 'ease',
-        once: true,
-      });
+      // AOS.init({
+      //   offset: 20,
+      //   delay: 0,
+      //   duration: 1500,
+      //   easing: 'ease',
+      //   once: true,
+      // });
     });
   </script>
 </body>
