learnmore button added

--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
   </div>
 
   <div class="banner-part">
-    <div class="banner-text" id="t">
-      The Powerful Healing Benefits of <br>
-      Antioxidant rich, Alkalized Water...
+    <div class="banner-text">
+      <div id="t">
+        The Powerful Healing Benefits of <br>
+        Antioxidant rich, Alkalized Water...
+      </div>
+      <a href="healthy-water.html" class="btn btn-learnmore">Learn More</a>
     </div>
     <img src="img/banner.jpg" alt="">
   </div>
