--- a/videos.html
+++ b/videos.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/img/fevicon.png">
-  <title>LEVELUK 501U</title>
+  <title>Videos</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -21,8 +21,7 @@
       <div class="header-menu-section col pe-0">
         <div class="header-top">
           <div class="header-icon">
-            <a href="#"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime:
-                720-317-9674</span></a>
+            <a href="#"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime: 720-317-9674</span></a>
           </div>
           <div class="header-icon">
             <a href="#"><i class="bi bi-envelope"></i> <span class="rc">bemer.surya@gmail.com</span></a>
@@ -42,9 +41,9 @@
           <ul class="custom-navbar" id="menuToggle">
             <li><a href="/">Home</a></li>
             <li><a href="/about.html">About</a></li>
-            <li class="active"><a href="/products.html">Products</a></li>
+            <li><a href="/products.html">Products</a></li>
             <li><a href="/contact.html">Contact</a></li>
-            <li><a href="/videos.html">Videos</a></li>
+            <li class="active"><a href="/videos.html">Videos</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
@@ -54,70 +53,18 @@
   </div>
 
   <div class="inner-banner-part">
-    <div class="banner-text"> LEVELUK 501U </div>
+    <div class="banner-text"> Videos </div>
   </div>
 
-  <div class="inner-body inner-product">
+  <div class="inner-body">
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>THE UNDER-THE-COUNTER MODEL </h1>
-          <p>
-            If you could use a little more free counter space, this is the perfect unit for your kitchen! With the
-            quality and power of the SD501, but the convenience of nestling discreetly under your sink.
-            <br>
-            This Enagic machine is both practical and highly accommodating. You will still enjoy a fully featured,
-            compact LCD control panel that is wall-mounted.
-          </p>
+          <h1>Videos</h1>
+          <p> Under development</p>
         </div>
         <div class="col justify-content-center d-flex align-items-center">
-          <div class="inner-about-img">
-            <img src="img/products/sd501u.jpg" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="feature-products inner-feature-products">
-    <div class="container">
-      <h1 class="section-heading mb-5"><span>Features</span></h1>
-
-      <div class="row">
-        <div class="col">
-          <div class="card">
-            <img src="img/products/sd501u-1.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Quality and Power</h5>
-              <p class="card-text">Enjoy the quality and power of the SD501 right at your kitchen sink - without
-                sacrificing valuable counter space!<br>
-                <strong>Generates: Strong Kangen Water, Kangen Water®, Neutral Water, Beauty Water, and Strong Acidic
-                  Water. </strong>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/products/sd501u-2.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Wall-Mounted LCD Control Panel </h5>
-              <p class="card-text">You will still enjoy a fully featured, compact LCD control panel that is
-                wall-mounted.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/products/k8-3.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <h5 class="card-title">7 Titanium Plates</h5>
-              <p class="card-text">Like all 501 models, the SD501 uses innovative electrolysis technology with 7
-                platinum-coated 99.97% pure titanium electrode plates.
-              </p>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -130,8 +77,7 @@
           <img src="../img/logo-white.png" alt="">
         </div>
         <div class="footer-about">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
           dolore<br>
           magna aliqua. Quis ipsum
         </div>
