--- a/about.html
+++ b/about.html
@@ -43,6 +43,8 @@
             <li class="active"><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/videos.html">Videos</a></li>
+            <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
         </div>
