--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,8 @@
             <li><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
             <li class="active"><a href="/contact.html">Contact</a></li>
+            <li><a href="/videos.html">Videos</a></li>
+            <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
         </div>
@@ -62,9 +64,10 @@
           <h1>How can we <br>help you? </h1>
           <p>We are at your disposal 7 days a week! </p>
           <hr>
+          <h3>For Products enquires and purchase, Contact:</h3>
           <h1>720-317-9674 </h1>
-          <p>Monday - Friday: 9:00-20:00<br>
-            Saturday: 11:00 - 15:00 </p>
+          <p>Monday - Friday: 9:00-20:00 EST<br>
+            Saturday: 11:00 - 15:00 EST</p>
           <div class="d-flex">
             <a href="mailto:bemer.surya@gmail.com" class="btn btn-email">bemer.surya@gmail.com</a>
           </div>
