--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             <li><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/videos.html">Videos</a></li>
+            <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
         </div>
@@ -283,6 +285,9 @@
           <div class="  d-flex justify-content-center">Balbir Kaur</div>
           <div class="  d-flex justify-content-center">Student</div>
         </div>
+      </div>
+      <div class="section-footer">
+        <a href="/testimonials.html" class="btn btn-section">See More</a>
       </div>
     </div>
   </div>
