--- a/leveluk-jriv.html
+++ b/leveluk-jriv.html
@@ -44,6 +44,8 @@
             <li><a href="/about.html">About</a></li>
             <li class="active"><a href="/products.html">Products</a></li>
             <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/videos.html">Videos</a></li>
+            <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
         </div>
