small changes are done

--- a/leveluk-501u.html
+++ b/leveluk-501u.html
@@ -129,11 +129,7 @@
         <div class="footer-logo">
           <img src="../img/logo-white.png" alt="">
         </div>
-        <div class="footer-about">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-          et
-          dolore<br>
-          magna aliqua. Quis ipsum
+        <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
