--- a/about.html
+++ b/about.html
@@ -40,10 +40,11 @@
           </button>
           <ul class="custom-navbar" id="menuToggle">
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
-            <li><a href="/contact.html">Contact</a></li>
             <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/testimonials.html">Testimonials</a></li>
+            <li class="active"><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
@@ -93,10 +94,7 @@
         <div class="footer-logo">
           <img src="../img/logo-white.png" alt="">
         </div>
-        <div class="footer-about">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore<br>
-          magna aliqua. Quis ipsum
+        <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
