--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,11 @@
           </button>
           <ul class="custom-navbar" id="menuToggle">
             <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
-            <li class="active"><a href="/contact.html">Contact</a></li>
             <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/testimonials.html">Testimonials</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li class="active"><a href="/contact.html">Contact</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
@@ -74,7 +75,7 @@
         </div>
         <div class="col ps-5 justify-content-center d-flex align-items-center">
           <div class="inner-about-img">
-            <iframe
+            <iframe title="location"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243646.90509723692!2d78.24323233266864!3d17.412608641430992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1696248847220!5m2!1sen!2sin"
               width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -90,10 +91,7 @@
         <div class="footer-logo">
           <img src="../img/logo-white.png" alt="">
         </div>
-        <div class="footer-about">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore<br>
-          magna aliqua. Quis ipsum
+        <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
