--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
           </button>
           <ul class="custom-navbar" id="menuToggle">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
             <li><a href="/products.html">Products</a></li>
-            <li><a href="/contact.html">Contact</a></li>
             <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/testimonials.html">Testimonials</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
@@ -54,11 +55,14 @@
 
   <div class="banner-part">
     <div class="banner-text">
-      <div id="t">
-        The Powerful Healing Benefits of <br>
-        Antioxidant rich, Alkalized Water...
+      <div class="text-center">
+        <h1>Change your Water Change your Life</h1>
+        <div id="t">
+          The Powerful Healing Benefits of
+          Antioxidant rich, Alkalized Water...
+        </div>
+        <a href="healthy-water.html" class="btn btn-learnmore">Learn More</a>
       </div>
-      <a href="healthy-water.html" class="btn btn-learnmore">Learn More</a>
     </div>
     <img src="img/banner.jpg" alt="">
   </div>
@@ -298,10 +302,7 @@
         <div class="footer-logo">
           <img src="../img/logo-white.png" alt="">
         </div>
-        <div class="footer-about">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore<br>
-          magna aliqua. Quis ipsum
+        <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
