--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/img/fevicon.png">
-  <title>OUR FOOD OUR HEALTH</title>
+  <title>Products</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -40,10 +40,11 @@
           </button>
           <ul class="custom-navbar" id="menuToggle">
             <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
             <li class="active"><a href="/products.html">Products</a></li>
-            <li><a href="/contact.html">Contact</a></li>
             <li><a href="/videos.html">Videos</a></li>
+            <li><a href="/testimonials.html">Testimonials</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
             <li class="buy-now"><a href="/contact.html">Buy Now</a></li>
           </ul>
           <div class="ofoh">Discovering the Power of Food for Better Health</div>
@@ -224,10 +225,7 @@
         <div class="footer-logo">
           <img src="../img/logo-white.png" alt="">
         </div>
-        <div class="footer-about">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore<br>
-          magna aliqua. Quis ipsum
+        <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
