all changes done

--- a/anespa-dx.html
+++ b/anespa-dx.html
@@ -69,6 +69,13 @@
             safe, moisturizing minerals that are healthy for your skin and hair. Enjoy a lovely shower or bath in ANESPA
             DX hot spring water!
           </p>
+          <p>* Activated charcoal filter with a Futama-ceramic inner filter containing:</p>
+          <ol>
+            <li>Tufa: A mineral stone taken directly from the Futamata Radium Hot spring in Hokkaido, Japan.<br>This
+              stone gives the water the same gentle and relaxing effect of a hot spring.</li>
+            <li>MIC Stone: Generates activated mildly alkaline water which is good for your skin. </li>
+            <li>Power stone: Generates strong negative-ions. </li>
+          </ol>
         </div>
         <div class="col justify-content-center d-flex align-items-center">
           <div class="inner-about-img">
@@ -123,6 +130,114 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+
+  <div class="inner-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <table class="table table-bordered" aria-describedby="">
+            <tbody class="product-details page-server-load">
+              <tr>
+                <th>Electrode plates:</th>
+                <td>
+                  N/A
+                </td>
+              </tr>
+              <tr>
+                <th>Plate size: (mm)</th>
+                <td>N/A</td>
+              </tr>
+              <tr>
+                <th>Generates:</th>
+                <td>
+                  Mineral ion water for your bath or shower
+                </td>
+              </tr>
+              <tr>
+                <th>pH Range:</th>
+                <td>Same as tap water</td>
+              </tr>
+              <tr>
+                <th>Wattage: (W)</th>
+                <td>
+                  N/A
+                </td>
+              </tr>
+              <tr>
+                <th>Total weight: (kg)</th>
+                <td>2.5</td>
+              </tr>
+              <tr>
+                <th>Dimensions W x Diameter: (mm)</th>
+                <td>130 x 346</td>
+              </tr>
+              <tr>
+                <th>Production rate: (l/min)</th>
+                <td>2.6</td>
+              </tr>
+              <tr>
+                <th>Ease of Use:</th>
+                <td>Very simple to install and operate</td>
+              </tr>
+              <tr>
+                <th>Warranty: (years)</th>
+                <td>3</td>
+              </tr>
+              <tr>
+                <th>New features for DX model:</th>
+                <td>Larger ceramic cartridge containing a greater amount of ceramic balls. New, redesigned base for a
+                  more efficient filter replacement process.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col">
+          <h3>Important comparison points:</h3>
+          <ol type="1">
+            <li>
+              The number of electrode plates
+            </li>
+            <li>
+              Electrode plate composition
+            </li>
+            <li>
+              The -ORP (Oxidation Reduction Potential)
+            </li>
+            <li>
+              Plate size
+            </li>
+            <li>
+              The pH ranges the machine produces
+            </li>
+            <li>
+              Wattage
+            </li>
+            <li>
+              Flow rate
+            </li>
+            <li>
+              Ease of use
+            </li>
+          </ol>
+        </div>
+        <div class="col">
+          <h3>Did you know? </h3>
+          <p>Increasing the number of electrode plates from 5 to 7 increases the -ORP by 33% and will prolong the life
+            of the unit by approximately 28%!</p>
+          <p>The ORP differs depending on the source water and the water you are creating.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="inner-body pt-0">
+    <div class="container">
+      <img src="img/products/iso.png" alt="" class="img-fluid mb-5">
+      <img src="img/products/iso-icons.png" alt="" class="img-fluid">
     </div>
   </div>
 
