--- a/leveluk-k8.html
+++ b/leveluk-k8.html
@@ -83,7 +83,6 @@
   <div class="feature-products inner-feature-products">
     <div class="container">
       <h1 class="section-heading mb-5"><span>Features</span></h1>
-
       <div class="row">
         <div class="col">
           <div class="card">
@@ -139,6 +138,121 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="inner-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <table class="table table-bordered" aria-describedby="">
+            <tbody class="product-details page-server-load">
+              <tr>
+                <th>Electrode plates:</th>
+                <td>
+                  8
+                </td>
+              </tr>
+              <tr>
+                <th>Plate size: (mm)</th>
+                <td>135 x 75</td>
+              </tr>
+              <tr>
+                <th>Negative ORP: (mV)</th>
+                <td>
+                  -722
+                </td>
+              </tr>
+              <tr>
+                <th>pH Range:</th>
+                <td>2.5 - 11.5</td>
+              </tr>
+              <tr>
+                <th>Generates:</th>
+                <td>
+                  5 water types
+
+                </td>
+              </tr>
+              <tr>
+                <th>Wattage: (W)</th>
+                <td>230</td>
+              </tr>
+              <tr>
+                <th>Total weight: (kg)</th>
+                <td>5</td>
+              </tr>
+              <tr>
+                <th>Dimensions WHD: (mm)</th>
+                <td>279 x 345 x 147</td>
+              </tr>
+              <tr>
+                <th>Production rate: (l/min)</th>
+                <td>Kangen Water<small>®</small>: 4.5 - 7.6<br>Acidic Water: 1.5 - 2.6<br>Strong Acidic Water: 0.6 - 1.1
+                </td>
+              </tr>
+              <tr>
+                <th>Ease of Use:</th>
+                <td>Fully automatic, very simple to operate</td>
+              </tr>
+              <tr>
+                <th>Languages:</th>
+                <td>
+                  8
+
+                </td>
+              </tr>
+              <tr>
+                <th>Warranty: (years)</th>
+                <td>5</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col">
+          <h3>Important comparison points:</h3>
+          <ol type="1">
+            <li>
+              The number of electrode plates
+            </li>
+            <li>
+              Electrode plate composition
+            </li>
+            <li>
+              The -ORP (Oxidation Reduction Potential)
+            </li>
+            <li>
+              Plate size
+            </li>
+            <li>
+              The pH ranges the machine produces
+            </li>
+            <li>
+              Wattage
+            </li>
+            <li>
+              Flow rate
+            </li>
+            <li>
+              Ease of use
+            </li>
+          </ol>
+        </div>
+        <div class="col">
+          <h3>Did you know? </h3>
+          <p>Increasing the number of electrode plates from 5 to 7 increases the -ORP by 33% and will prolong the life
+            of the unit by approximately 28%!</p>
+          <p>The ORP differs depending on the source water and the water you are creating.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="inner-body pt-0">
+    <div class="container">
+      <img src="img/products/iso.png" alt="" class="img-fluid mb-5">
+      <img src="img/products/iso-icons.png" alt="" class="img-fluid">
     </div>
   </div>
 
