mobile responsive completed.

--- a/about.html
+++ b/about.html
@@ -21,10 +21,12 @@
       <div class="header-menu-section col pe-0">
         <div class="header-top">
           <div class="header-icon">
-            <a href="#"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime: 720-317-9674</span></a>
+            <a href="tel:+917203179674"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime:
+                720-317-9674</span></a>
           </div>
           <div class="header-icon">
-            <a href="#"><i class="bi bi-envelope"></i> <span class="rc">bemer.surya@gmail.com</span></a>
+            <a href="mailto:bemer.surya@gmail.com"><i class="bi bi-envelope"></i> <span
+                class="rc">bemer.surya@gmail.com</span></a>
           </div>
           <div class="header-social-icons">
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -98,7 +100,8 @@
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
-          +01 2345 6789 12|+01 2345 6789 12
+          <a href="tel:+917203179674">720-317-9674</a> | <a
+            href="mailto:bemer.surya@gmail.com">bemer.surya@gmail.com</a>
         </div>
 
         <div class="footer-social-icons">
