--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,12 @@
       <div class="header-menu-section col pe-0">
         <div class="header-top">
           <div class="header-icon">
-            <a href="#"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime: 720-317-9674</span></a>
+            <a href="tel:+917203179674"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime:
+                720-317-9674</span></a>
           </div>
           <div class="header-icon">
-            <a href="#"><i class="bi bi-envelope"></i> <span class="rc">bemer.surya@gmail.com</span></a>
+            <a href="mailto:bemer.surya@gmail.com"><i class="bi bi-envelope"></i> <span
+                class="rc">bemer.surya@gmail.com</span></a>
           </div>
           <div class="header-social-icons">
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -66,14 +68,14 @@
           <p>We are at your disposal 7 days a week! </p>
           <hr>
           <h3>For Products enquires and purchase, Contact:</h3>
-          <h1>720-317-9674 </h1>
+          <h1><a href="tel:+917203179674">720-317-9674</a></h1>
           <p>Monday - Friday: 9:00-20:00 EST<br>
             Saturday: 11:00 - 15:00 EST</p>
           <div class="d-flex">
             <a href="mailto:bemer.surya@gmail.com" class="btn btn-email">bemer.surya@gmail.com</a>
           </div>
         </div>
-        <div class="col ps-5 justify-content-center d-flex align-items-center">
+        <div class="col ps-sm-5 justify-content-center d-flex align-items-center">
           <div class="inner-about-img">
             <iframe title="location"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243646.90509723692!2d78.24323233266864!3d17.412608641430992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1696248847220!5m2!1sen!2sin"
@@ -95,7 +97,9 @@
         </div>
         <div class="footer-contact">
           1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
-          +01 2345 6789 12|+01 2345 6789 12
+          <a href="tel:+917203179674">720-317-9674</a> | <a
+            href="mailto:bemer.surya@gmail.com">bemer.surya@gmail.com</a>
+
         </div>
 
         <div class="footer-social-icons">
