final level changes completed.

--- a/leveluk-k8.html
+++ b/leveluk-k8.html
@@ -21,7 +21,7 @@
       <div class="header-menu-section col pe-0">
         <div class="header-top">
           <div class="header-icon">
-            <a href="tel:+917203179674"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime:
+            <a href="tel:+917203179674"><i class="bi bi-telephone"></i> <span class="rc">
                 720-317-9674</span></a>
           </div>
           <div class="header-icon">
@@ -266,7 +266,7 @@
         <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
-          1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
+          <br>
           <a href="tel:+917203179674">720-317-9674</a> | <a
             href="mailto:bemer.surya@gmail.com">bemer.surya@gmail.com</a>
         </div>
