--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <div class="header-menu-section col pe-0">
         <div class="header-top">
           <div class="header-icon">
-            <a href="tel:+917203179674"><i class="bi bi-telephone"></i> <span class="rc"> Call Anytime:
+            <a href="tel:+917203179674"><i class="bi bi-telephone"></i> <span class="rc">
                 720-317-9674</span></a>
           </div>
           <div class="header-icon">
@@ -75,14 +75,7 @@
             <a href="mailto:bemer.surya@gmail.com" class="btn btn-email">bemer.surya@gmail.com</a>
           </div>
         </div>
-        <div class="col ps-sm-5 justify-content-center d-flex align-items-center">
-          <div class="inner-about-img">
-            <iframe title="location"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243646.90509723692!2d78.24323233266864!3d17.412608641430992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0xae93b78392bafbc2!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1696248847220!5m2!1sen!2sin"
-              width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
@@ -96,7 +89,7 @@
         <div class="footer-about">Change your Water Change your Life
         </div>
         <div class="footer-contact">
-          1120 Lorem ipsum dolor sit amet, KC 179050, Chandigarh.<br>
+          <br>
           <a href="tel:+917203179674">720-317-9674</a> | <a
             href="mailto:bemer.surya@gmail.com">bemer.surya@gmail.com</a>
 
