--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col">
           <h1>How can we <br>help you? </h1>
-          <p>We are at your disposal 7 days a week! </p>
+          <!-- <p>We are at your disposal 7 days a week! </p> -->
           <hr>
           <h3>For Products enquires and purchase, Contact:</h3>
           <h1><a href="tel:+917203179674">720-317-9674</a></h1>
